--- a/asistencia.html
+++ b/asistencia.html
@@ -5,15 +5,6 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Registro de Asistencia</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        /* Tamaño fijo del canvas para que SignaturePad funcione correctamente */
-        .signature-pad {
-            border: 1px solid #ccc;
-            width: 100%;
-            max-width: 500px;
-            height: 200px;
-        }
-    </style>
 </head>
 <body>
 <header class="header">
@@ -31,31 +22,38 @@
     <form id="asistenciaForm" class="form-card">
         <div class="field">
             <label for="nombre">Nombre</label>
-            <input id="nombre" type="text" required>
+            <input id="nombre" name="nombre" type="text" required />
         </div>
+
         <div class="field">
             <label for="correo">Correo</label>
-            <input id="correo" type="email" required>
+            <input id="correo" name="correo" type="email" required />
         </div>
+
         <div class="field">
             <label for="empresa">Empresa</label>
-            <input id="empresa" type="text" required>
+            <input id="empresa" name="empresa" type="text" required />
         </div>
+
         <div class="field">
             <label for="telefono">Teléfono</label>
-            <input id="telefono" type="tel" required>
+            <input id="telefono" name="telefono" type="tel" required />
         </div>
+
         <div class="field">
             <label>Firma</label>
-            <canvas id="signature-pad" class="signature-pad"></canvas>
-            <div>
-                <button type="button" id="clearBtn">Borrar firma</button>
+            <canvas id="signature-pad" class="signature-pad" width="300" height="150" style="border:1px solid #ccc;"></canvas>
+            <div class="signature-controls">
+                <button type="button" id="clearBtn" class="btn btn-ghost">Borrar firma</button>
+                <small class="hint">Firma con dedo o mouse</small>
             </div>
         </div>
+
         <div class="actions">
-            <button type="button" id="submitBtn">Registrar asistencia</button>
+            <button id="submitBtn" type="button" class="btn">Registrar asistencia</button>
         </div>
-        <p id="status"></p>
+
+        <p id="status" class="status" aria-live="polite"></p>
     </form>
 </main>
 
@@ -67,96 +65,113 @@
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <script>
-    // CONFIGURACIÓN SUPABASE
+    // ========================
+    // CONFIGURACIÓN SUPABASE (igual que en ambos códigos)
+    // ========================
     const SUPABASE_URL = "https://kdacskidrbbqbstizekl.supabase.co";
-    const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtkYWNza2lkcmJicWJzdGl6ZWtsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjExNTQ1NDIsImV4cCI6MjA3NjczMDU0Mn0.SqnbCRbwI4EWYp14VAF8HR5cSmeaF4FNI5bUVOCuD0wM";
-    const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+    const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImtkYWNza2lkcmJicWJzdGl6ZWtsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjExNTQ1NDIsImV4cCI6MjA3NjczMDU0Mn0.SqnbCRbwI4EWYp14VAF8HR5SmeaF4FNI5bUVOCuD0wM";
+    const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-    const canvas = document.getElementById('signature-pad');
-    const clearBtn = document.getElementById('clearBtn');
-    const submitBtn = document.getElementById('submitBtn');
-    const statusEl = document.getElementById('status');
+    // ========================
+    // ELEMENTOS DOM
+    // ========================
+    const canvas = document.getElementById("signature-pad");
+    const clearBtn = document.getElementById("clearBtn");
+    const submitBtn = document.getElementById("submitBtn");
+    const statusEl = document.getElementById("status");
 
-    // Ajustar canvas a tamaño fijo para SignaturePad
-    function prepareCanvas() {
+    // Ajustar tamaño del canvas para pantallas con devicePixelRatio (Mejor práctica de SignaturePad)
+    function resizeCanvas() {
+        // Guarda los datos de la firma si ya existe para restaurarlos después
+        const data = sigPad ? sigPad.toData() : [];
         const ratio = Math.max(window.devicePixelRatio || 1, 1);
-        canvas.width = canvas.offsetWidth * ratio;
-        canvas.height = canvas.offsetHeight * ratio;
-        const ctx = canvas.getContext('2d');
+        // Establece el ancho y alto interno del canvas
+        canvas.width = Math.floor(canvas.offsetWidth * ratio);
+        canvas.height = Math.floor(canvas.offsetHeight * ratio);
+        const ctx = canvas.getContext("2d");
+        // Escala el contexto para alta densidad de píxeles
         ctx.scale(ratio, ratio);
+        // Restaura la firma
+        sigPad.fromData(data);
+        sigPad.clear(); // Limpiar el canvas para evitar problemas de escalado con el borde
     }
 
-    prepareCanvas();
+    // Iniciar SignaturePad
+    // Se inicializa primero y luego se redimensiona
+    const sigPad = new SignaturePad(canvas, { backgroundColor: 'rgb(255,255,255)' });
+    resizeCanvas();
+
     window.addEventListener('resize', () => {
-        prepareCanvas();
-        signaturePad.clear();
+        // al redimensionar se redibuja el canvas
+        resizeCanvas();
     });
 
-    // Inicializar SignaturePad
-    const signaturePad = new SignaturePad(canvas, { backgroundColor: 'rgb(255,255,255)' });
+    clearBtn.addEventListener('click', () => {
+        sigPad.clear();
+    });
 
-    clearBtn.addEventListener('click', () => signaturePad.clear());
+    // Obtener sessionId desde querystring (opcional)
+    const urlParams = new URLSearchParams(window.location.search);
+    const sessionId = urlParams.get('sessionId') || null;
 
-    const sessionId = new URLSearchParams(window.location.search).get('sessionId') || null;
-
+    // ========================
+    // Función principal: grabar firma -> storage -> insertar registro (Lógica robusta del Código 2)
+    // ========================
     async function registrarAsistencia() {
         statusEl.textContent = '';
         submitBtn.disabled = true;
         submitBtn.textContent = 'Registrando...';
 
         try {
+            // Validaciones
             const nombre = document.getElementById('nombre').value.trim();
             const correo = document.getElementById('correo').value.trim();
             const empresa = document.getElementById('empresa').value.trim();
             const telefono = document.getElementById('telefono').value.trim();
 
             if (!nombre || !correo || !empresa || !telefono) {
-                statusEl.textContent = 'Por favor completa todos los campos.';
-                submitBtn.disabled = false;
-                submitBtn.textContent = 'Registrar asistencia';
-                return;
+                statusEl.textContent = '⚠️ Por favor completa todos los campos.';
+                return; // El finally se encarga de re-habilitar el botón
             }
 
-            if (signaturePad.isEmpty()) {
-                statusEl.textContent = 'Por favor firma antes de enviar.';
-                submitBtn.disabled = false;
-                submitBtn.textContent = 'Registrar asistencia';
-                return;
+            if (sigPad.isEmpty()) {
+                statusEl.textContent = '⚠️ Por favor firma antes de enviar.';
+                return; // El finally se encarga de re-habilitar el botón
             }
 
-            // Convertir la firma a blob correctamente
-            const dataURL = signaturePad.toDataURL('image/png');
-            const blob = await (await fetch(dataURL)).blob();
+            // 1. Convertir la firma a blob (Usando la API de SignaturePad)
+            const dataURL = sigPad.toDataURL('image/png');
+            const res = await fetch(dataURL);
+            const blob = await res.blob();
 
+            // Nombre de archivo único
             const safeName = nombre.replace(/\s+/g, '_').replace(/[^a-zA-Z0-9_-]/g, '');
             const archivo = `firmas/${Date.now()}_${safeName}.png`;
 
+            // 2. Subir a Supabase Storage
             const { error: uploadError } = await supabase.storage
                 .from('firmas')
-                .upload(archivo, blob, { contentType: 'image/png', upsert: true });
+                .upload(archivo, blob, { contentType: 'image/png' });
 
             if (uploadError) throw uploadError;
 
-            const { data: publicUrlData, error: urlError } = supabase.storage
-                .from('firmas')
-                .getPublicUrl(archivo);
-
-            if (urlError) throw urlError;
-
+            // 3. Obtener URL pública
+            const { data: publicUrlData } = supabase.storage.from('firmas').getPublicUrl(archivo);
             const firma_url = publicUrlData.publicUrl;
 
+            // 4. Insertar en la tabla 'asistencias'
             const { error: insertError } = await supabase
                 .from('asistencias')
                 .insert([{ nombre, correo, empresa, telefono, firma_url, session_id: sessionId }]);
 
             if (insertError) throw insertError;
 
+            // Éxito
             statusEl.textContent = '✅ Asistencia registrada correctamente.';
             document.getElementById('asistenciaForm').reset();
-            signaturePad.clear();
-
+            sigPad.clear();
         } catch (err) {
-            console.error('Error al registrar:', err);
+            console.error('Error al subir firma / insertar registro:', err);
             statusEl.textContent = '❌ Error al registrar asistencia. Revisa la consola.';
         } finally {
             submitBtn.disabled = false;
